--- a/inflations.ipynb
+++ b/inflations.ipynb
@@ -1480,6 +1480,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pmdarima'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/athena/Documents/DataAnalysis/inflations.ipynb Cell 17\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/athena/Documents/DataAnalysis/inflations.ipynb#X24sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpmdarima\u001b[39;00m \u001b[39mimport\u001b[39;00m auto_arima \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/athena/Documents/DataAnalysis/inflations.ipynb#X24sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Fit auto_arima function to your timeseries data\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/athena/Documents/DataAnalysis/inflations.ipynb#X24sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m stepwise_fit \u001b[39m=\u001b[39m auto_arima(ts, start_p \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m, start_q \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m, \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/athena/Documents/DataAnalysis/inflations.ipynb#X24sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m                           max_p \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m, max_q \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m, m \u001b[39m=\u001b[39m \u001b[39m12\u001b[39m, \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/athena/Documents/DataAnalysis/inflations.ipynb#X24sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m                           start_P \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m, seasonal \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m, \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/athena/Documents/DataAnalysis/inflations.ipynb#X24sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m                           suppress_warnings \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m,  \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/athena/Documents/DataAnalysis/inflations.ipynb#X24sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m                           stepwise \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m)           \n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pmdarima'"
+     ]
+    }
+   ],
+   "source": [
+    "from pmdarima import auto_arima \n",
+    "\n",
+    "# Fit auto_arima function to your timeseries data\n",
+    "stepwise_fit = auto_arima(ts, start_p = 1, start_q = 1, \n",
+    "                          max_p = 3, max_q = 3, m = 12, \n",
+    "                          start_P = 0, seasonal = True, \n",
+    "                          d = None, D = 1, trace = True, \n",
+    "                          error_action ='ignore',   \n",
+    "                          suppress_warnings = True,  \n",
+    "                          stepwise = True)           \n",
+    "\n",
+    "# Print the summary \n",
+    "stepwise_fit.summary()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1518,7 +1551,7 @@
     "ts = BRICSdf.set_index('2022')['Country Code']\n",
     "\n",
     "# Fit an ARIMA model\n",
-    "model = ARIMA(ts, order=(1, 2, 3)) \n",
+    "model = ARIMA(ts, order=(1, 2, 3)) # \n",
     "results = model.fit()\n",
     "\n",
     "# Forecast future values\n",
